--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,32 @@
   </head>
 
   <body>
-    <nav>
-      <h2>Selwyn Event Ticketing | SET</h2>
-      <p><a href="{{url_for('home')}}">Home</a></p>
-      <p><a href="{{url_for('events')}}">Events</a></p>
-      <p><a href="{{url_for('customers')}}">Customers</a></p>
-      <p><a href="{{url_for('futureevents')}}">Future Events</a></p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a class="navbar-brand" href="{{url_for('home')}}">Selwyn Event Ticketing</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('home')}}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('events')}}">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('customers')}}">Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('search_customers')}}">Search Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('futureevents')}}">Future Events</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
           
     <section class="content">
